Fixed css z-index problem for editor mode

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -8,6 +8,11 @@
 	clear: none;
 	margin-top: 0 !important;
 	margin-bottom: 0 !important;
+	z-index: 0;
+}
+
+.wp-block-hsq-hsq-project-link .block-editor-block-list__layout figure {
+	z-index: 1;
 }
 
 .wp-block-hsq-hsq-project-link .block-editor-block-list__layout::after {
